# mcp-jobless-castle

./: .gitignore  README.md  pyproject.toml  requirements.txt
pseudo_data/ad_market/: campaigns.py  generators.py
pseudo_data/common/: _base.py  consumer_brands.py  country.py  demographics.py  generators.py  people_names.py
pseudo_data/travel/: entities.py  generator.py
scripts/: lint.sh
services/ad_pricing/: server.py
tests/pseudo_data/common/: test__base.py
