[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobless-castle-api"
version = "0.1.0"
description = "A Python 3.13 webservice project with Docker support"
authors = [
    { name = "chaffix", email = "chaffixdev@not.your.business.com" }
]
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
keywords = ["webservice", "docker", "fastapi", "uvicorn"]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "ruff>=0.5.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "types-requests",
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
line-length = 88
target-version = "py313"
lint.select = ["E", "F", "I", "B"]
lint.ignore = ["E501"]  # handled by black

[tool.mypy]
python_version = "3.13"
strict = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.uvicorn]
factory = true
reload = true
host = "0.0.0.0"
port = 8000